[gd_scene load_steps=19 format=3 uid="uid://drfvvvjxnexew"]

[ext_resource type="Texture2D" uid="uid://skwubifcy71r" path="res://Asset_Midterm/Tile_Map/Fantasy Swamp Forest/Free/BG_3/BG_3.png" id="1_a61d8"]
[ext_resource type="Script" uid="uid://bghffp6sif8dt" path="res://Scene/win_scene.gd" id="1_o8bnm"]
[ext_resource type="Texture2D" uid="uid://byk3vy2oruw1d" path="res://Asset_Midterm/Tile_Map/Fantasy Swamp Forest/Free/BG_2/BG_2.png" id="2_xfxam"]
[ext_resource type="Texture2D" uid="uid://cv5ru2joj0lkf" path="res://Asset_Midterm/Tile_Map/Fantasy Swamp Forest/Free/BG_1/BG_1.png" id="3_rvas1"]
[ext_resource type="FontFile" uid="uid://dbydje27os4iv" path="res://Fonts/AncientModernTales-a7Po.ttf" id="4_85v0v"]
[ext_resource type="Texture2D" uid="uid://c4h0a1mxnr14v" path="res://Asset_Midterm/UI/Player_UI/Char design2 Elendros_20250820104912.png" id="4_rvas1"]
[ext_resource type="Texture2D" uid="uid://q3s1a5fpkwu8" path="res://Asset_Midterm/UI/Player_UI/Char design4_20250820104850.png" id="5_85v0v"]
[ext_resource type="Texture2D" uid="uid://dkyfygbi0dekj" path="res://Asset_Midterm/UI/UI/Button_52x14.png" id="5_sun21"]
[ext_resource type="Texture2D" uid="uid://dcwmmeumqrkse" path="res://Asset_Midterm/Achievement icon/Crown1.png" id="6_k6vtl"]
[ext_resource type="FontFile" uid="uid://bdl4qpamcrivq" path="res://Fonts/OBGB.TTF" id="6_o8bnm"]
[ext_resource type="Texture2D" uid="uid://mnocfx3oqu5e" path="res://Asset_Midterm/Achievement icon/Chest2.png" id="7_gw231"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_85v0v"]
bg_color = Color(0.509804, 0.396078, 0.243137, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jru1r"]
bg_color = Color(0.239216, 0.196078, 0.223529, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xghm7"]
texture = ExtResource("6_k6vtl")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4nh8j"]
texture = ExtResource("7_gw231")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nl6g7"]
texture = ExtResource("5_sun21")
modulate_color = Color(0.666667, 0.666667, 0.666667, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k6vtl"]
texture = ExtResource("5_sun21")
modulate_color = Color(0.666667, 0.666667, 0.666667, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gw231"]
texture = ExtResource("5_sun21")

[node name="Win Scene" type="Node2D"]
script = ExtResource("1_o8bnm")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
metadata/_edit_use_anchors_ = true

[node name="Parallax2D3" type="Parallax2D" parent="CanvasLayer/Control"]
modulate = Color(0.690196, 0.760784, 0.796078, 1)
scale = Vector2(2.97157, 2.97157)
scroll_offset = Vector2(-3300.83, -741)
repeat_size = Vector2(1928.61, 0)
autoscroll = Vector2(20, 0)
repeat_times = 2
metadata/_edit_lock_ = true

[node name="Bg3" type="Sprite2D" parent="CanvasLayer/Control/Parallax2D3"]
position = Vector2(900, 272)
scale = Vector2(0.941406, 1)
texture = ExtResource("1_a61d8")
metadata/_edit_lock_ = true

[node name="Parallax2D2" type="Parallax2D" parent="CanvasLayer/Control"]
modulate = Color(0.690196, 0.760784, 0.796078, 1)
scale = Vector2(2.97157, 2.97157)
scroll_offset = Vector2(-4722.51, -740)
repeat_size = Vector2(1770, 0)
autoscroll = Vector2(25, 0)
repeat_times = 2
metadata/_edit_lock_ = true

[node name="Bg2" type="Sprite2D" parent="CanvasLayer/Control/Parallax2D2"]
position = Vector2(1142, 272)
texture = ExtResource("2_xfxam")
metadata/_edit_lock_ = true

[node name="Parallax2D" type="Parallax2D" parent="CanvasLayer/Control"]
modulate = Color(0.690196, 0.760784, 0.796078, 1)
scale = Vector2(2.97157, 2.97157)
scroll_offset = Vector2(-5019.67, -740)
repeat_size = Vector2(1887, 0)
autoscroll = Vector2(30, 0)
repeat_times = 2
metadata/_edit_lock_ = true

[node name="Bg1" type="Sprite2D" parent="CanvasLayer/Control/Parallax2D"]
position = Vector2(1494.67, 272)
texture = ExtResource("3_rvas1")
metadata/_edit_lock_ = true

[node name="Finish_Detail" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 132.0
offset_top = -404.0
offset_right = 721.0
offset_bottom = 467.0
theme_override_styles/panel = SubResource("StyleBoxFlat_85v0v")

[node name="Panel" type="Panel" parent="CanvasLayer/Control/Finish_Detail"]
layout_mode = 0
offset_left = 20.0
offset_top = 16.0
offset_right = 570.0
offset_bottom = 844.0
theme_override_styles/panel = SubResource("StyleBoxFlat_jru1r")

[node name="text" type="Node2D" parent="CanvasLayer/Control/Finish_Detail"]

[node name="Congrats" type="Label" parent="CanvasLayer/Control/Finish_Detail/text"]
offset_left = 68.0
offset_top = 35.0
offset_right = 1340.0
offset_bottom = 298.0
scale = Vector2(0.36, 0.36)
theme_override_colors/font_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 19
theme_override_fonts/font = ExtResource("4_85v0v")
theme_override_font_sizes/font_size = 240
text = "Congratulations"

[node name="play_time" type="Label" parent="CanvasLayer/Control/Finish_Detail/text"]
modulate = Color(0.783523, 0.783523, 0.783523, 1)
offset_left = 65.0
offset_top = 154.0
offset_right = 1337.0
offset_bottom = 417.0
scale = Vector2(0.168, 0.168)
theme_override_colors/font_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 19
theme_override_fonts/font = ExtResource("4_85v0v")
theme_override_font_sizes/font_size = 240
text = "Time Played :"

[node name="info" type="Label" parent="CanvasLayer/Control/Finish_Detail/text/play_time"]
layout_mode = 0
offset_left = 1184.52
offset_top = -5.9523
offset_right = 2798.52
offset_bottom = 257.048
scale = Vector2(1.04128, 1.04128)
theme_override_colors/font_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 19
theme_override_fonts/font = ExtResource("4_85v0v")
theme_override_font_sizes/font_size = 240
text = "01 hrs 10 mins 22 secs"

[node name="Deaths" type="Label" parent="CanvasLayer/Control/Finish_Detail/text"]
modulate = Color(0.784314, 0.784314, 0.784314, 1)
offset_left = 69.0
offset_top = 219.0
offset_right = 1341.0
offset_bottom = 482.0
scale = Vector2(0.168, 0.168)
theme_override_colors/font_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 20
theme_override_fonts/font = ExtResource("4_85v0v")
theme_override_font_sizes/font_size = 240
text = "Deaths :"

[node name="info" type="Label" parent="CanvasLayer/Control/Finish_Detail/text/Deaths"]
layout_mode = 0
offset_left = 744.047
offset_top = 5.95239
offset_right = 2016.05
offset_bottom = 268.952
scale = Vector2(0.981681, 0.981681)
theme_override_colors/font_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 20
theme_override_fonts/font = ExtResource("4_85v0v")
theme_override_font_sizes/font_size = 240
text = "10"

[node name="Achievement" type="Label" parent="CanvasLayer/Control/Finish_Detail/text"]
offset_left = 171.0
offset_top = 311.0
offset_right = 1247.0
offset_bottom = 574.0
scale = Vector2(0.253109, 0.253109)
theme_override_colors/font_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 19
theme_override_fonts/font = ExtResource("4_85v0v")
theme_override_font_sizes/font_size = 240
text = "Achievement "

[node name="ac_1_name" type="Label" parent="CanvasLayer/Control/Finish_Detail/text"]
offset_left = 89.0
offset_top = 593.0
offset_right = 930.0
offset_bottom = 856.0
scale = Vector2(0.133104, 0.133104)
theme_override_colors/font_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 19
theme_override_fonts/font = ExtResource("4_85v0v")
theme_override_font_sizes/font_size = 240
text = "Untouched"

[node name="ac_1_name2" type="Label" parent="CanvasLayer/Control/Finish_Detail/text"]
offset_left = 331.0
offset_top = 591.0
offset_right = 1931.0
offset_bottom = 854.0
scale = Vector2(0.133104, 0.133104)
theme_override_colors/font_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 19
theme_override_fonts/font = ExtResource("4_85v0v")
theme_override_font_sizes/font_size = 240
text = "Nobleâ€™s Treasury"

[node name="achievement1" type="Panel" parent="CanvasLayer/Control/Finish_Detail"]
layout_mode = 0
offset_left = 64.0
offset_top = 382.0
offset_right = 252.0
offset_bottom = 570.0
theme_override_styles/panel = SubResource("StyleBoxTexture_xghm7")

[node name="achievement2" type="Panel" parent="CanvasLayer/Control/Finish_Detail"]
layout_mode = 0
offset_left = 302.0
offset_top = 353.0
offset_right = 556.0
offset_bottom = 607.0
theme_override_styles/panel = SubResource("StyleBoxTexture_4nh8j")

[node name="Main Menu" type="Button" parent="CanvasLayer/Control/Finish_Detail"]
modulate = Color(0.666667, 0.666667, 0.666667, 1)
layout_mode = 0
offset_left = 75.0
offset_top = 719.0
offset_right = 512.0
offset_bottom = 811.0
focus_mode = 0
theme_override_styles/hover = SubResource("StyleBoxTexture_nl6g7")
theme_override_styles/pressed = SubResource("StyleBoxTexture_k6vtl")
theme_override_styles/normal = SubResource("StyleBoxTexture_gw231")
text = "
"

[node name="Label" type="Label" parent="CanvasLayer/Control/Finish_Detail/Main Menu"]
layout_mode = 0
offset_left = 104.0
offset_top = 25.0
offset_right = 680.0
offset_bottom = 121.0
scale = Vector2(0.44, 0.44)
theme_override_fonts/font = ExtResource("6_o8bnm")
theme_override_font_sizes/font_size = 80
text = "Main Menu"

[node name="Player_profile" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = -682.0
offset_top = -326.0
offset_right = -93.0
offset_bottom = 379.0
theme_override_styles/panel = SubResource("StyleBoxFlat_85v0v")

[node name="Panel2" type="Panel" parent="CanvasLayer/Control/Player_profile"]
layout_mode = 0
offset_left = 20.0
offset_top = 16.0
offset_right = 570.0
offset_bottom = 688.0
theme_override_styles/panel = SubResource("StyleBoxFlat_jru1r")

[node name="PlayerProflie" type="Node2D" parent="CanvasLayer/Control/Player_profile"]
position = Vector2(749, 388)

[node name="Elendros_Profile" type="Sprite2D" parent="CanvasLayer/Control/Player_profile/PlayerProflie"]
visible = false
modulate = Color(0.77084, 0.770839, 0.770839, 1)
position = Vector2(-478, -89)
scale = Vector2(0.50348, 0.50348)
texture = ExtResource("4_rvas1")
region_enabled = true
region_rect = Rect2(688, 0, 934, 1544)

[node name="Nymera_Profile" type="Sprite2D" parent="CanvasLayer/Control/Player_profile/PlayerProflie"]
modulate = Color(0.772549, 0.772549, 0.772549, 1)
position = Vector2(-467, -32)
scale = Vector2(0.592105, 0.592105)
texture = ExtResource("5_85v0v")
region_enabled = true
region_rect = Rect2(472, 232, 760, 1120)

[connection signal="pressed" from="CanvasLayer/Control/Finish_Detail/Main Menu" to="." method="_on_main_menu_pressed"]
